@@ -3,3 +3,10 @@ dependencies {
     testImplementation(libs.junit.api)
     testRuntimeOnly(libs.junit.engine)
 }
+
+tasks.test {
+    val jdkVersion = System.getProperty("java.version")
+    if (jdkVersion.split(".").first().toInt() >= 16) {
+        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+    }
+}
